Migrate to add fields to user, updated new and edit view for user

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,6 +4,18 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
+    <%= f.input :first_name,
+                required: true,
+                autofocus: true,
+                input_html: { autocomplete: "first_name" }%>
+    <%= f.input :last_name,
+                required: true,
+                autofocus: true,
+                input_html: { autocomplete: "last_name" }%>
+    <%= f.input :avatar,
+                required: true,
+                autofocus: true,
+                input_html: { autocomplete: "avatar" }%>
     <%= f.input :email,
                 required: true,
                 autofocus: true,
@@ -15,6 +27,11 @@
     <%= f.input :password_confirmation,
                 required: true,
                 input_html: { autocomplete: "new-password" } %>
+    <%= f.input :role,
+                required: true,
+                autofocus: true,
+                input_html: { autocomplete: "role" },
+                as: :radio_buttons, collection: ['Farmer', 'Restaurant'] %>
   </div>
 
   <div class="form-actions">
