--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -10,6 +10,18 @@
       <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
     <% end %>
 
+    <%= f.input :first_name,
+                hint: "leave it blank if you don't want to change it",
+                required: false,
+                input_html: { autocomplete: "first_name" }%>
+    <%= f.input :last_name,
+                hint: "leave it blank if you don't want to change it",
+                required: false,
+                input_html: { autocomplete: "last_name" }%>
+    <%= f.input :avatar,
+                hint: "leave it blank if you don't want to change it",
+                required: false,
+                input_html: { autocomplete: "avatar" }%>
     <%= f.input :password,
                 hint: "leave it blank if you don't want to change it",
                 required: false,
