create simple form for new restaurants

--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -5,7 +5,7 @@
     <div class="form-inputs mt-4">
       <%= f.input :name, label: "Restaurant name" %>
       <%= f.input :address, label: "Address" %>
-      <%= f.input :avatar, label: "What is the current odometer? (kilometers)" %>
+      <%= f.input :avatar, label: "Image" %>
     </div>
     <div class="form-actions mt-4 mb-4">
       <%= f.button :submit, class: "btn btn-success" %>
