create view pages for products

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,3 +11,8 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+@import "components/cards";
+
+// 
+@import "products/index";
+@import "products/my_products";
