--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,4 +1,28 @@
-<% @products.each do |product| %>
-    <p><%= product.name %></p>
-    <p><%= product.sku %></p>
-<% end %>
+<div class='page-container'>
+    <div class='side-nav'>
+        <h4>Fruits</h4><br>
+        <h4>Vegetables</h4><br>
+        <h4>Meats</h4><br>
+        <h4>Dairy</h4>
+    </div>
+
+    <div class='cards-container'>
+        <% @products.each do |product| %>
+        <div class=product-card>
+            <div class='card-img'>
+                <img src='https://static6.depositphotos.com/1001503/609/i/950/depositphotos_6092650-stock-photo-healthy-food-background-orange.jpg'>
+            </div>
+            <div class='card-details'>
+                <div class='rows'>
+                    <h4><%= product.name %></h4>
+                    <img class='avatar photo-card' src='https://kitt.lewagon.com/placeholder/users/krokrob'>
+                </div>
+                <div class='rows'>
+                    <p>⭐️️️️️️️⭐️⭐️⭐️<%=product.rating%></p>
+                    <p>$<%=product.price%> / <small><%=product.unit_of_measurement%></small></p>
+                </div>
+            </div>
+        </div>
+        <% end %>
+        </div>
+</div>
