--- a/app/views/farmers/show.html.erb
+++ b/app/views/farmers/show.html.erb
@@ -1,3 +1,12 @@
 <%=@farmer.name  %>
 <%=@farmer.address  %>
 <%=@farmer.description  %>
+<%= link_to "Add new product", new_product_path  %>
+
+<br>
+<hr>
+
+<% @products.each do |product| %>
+<%= product.name %>
+<%= link_to "Add to cart", new_product_path  %>
+<% end %>
