create view pages for products

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -39,4 +39,26 @@
     
   }
 
+.action-buttons {
+    position: absolute;
+    top: 120px;
+    margin-left: 15px;
+}
+  
+.edit-b {
+    margin-left: 250px;
+}
+
 // END of Card for products in products page
+
+// Additions to product show page
+.add-to-cart {
+    position: absolute;
+    top: 80px;
+    margin-left: 15px;
+}
+
+.add-b {
+    margin-left: 265px;
+}
+// End of additions to product show page
