--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -9,6 +9,9 @@
     <div class='cards-container'>
         <% @products.each do |product| %>
         <div class=product-card>
+            <div class='add-to-cart'>
+                <%= link_to "", edit_product_path(product), class: "fas fa-plus-circle add-b" , style: 'font-size: 25px; color: black'%>
+            </div>
             <div class='card-img'>
                 <img src='https://static6.depositphotos.com/1001503/609/i/950/depositphotos_6092650-stock-photo-healthy-food-background-orange.jpg'>
             </div>
