--- a/app/views/products/my_products.html.erb
+++ b/app/views/products/my_products.html.erb
@@ -20,7 +20,7 @@
             <div class='card-details'>
                 <div class='rows'>
                     <h4><%= product.name %></h4>
-                    <img class='avatar photo-card' src='https://kitt.lewagon.com/placeholder/users/krokrob'>
+                    <p><%=number_with_delimiter(product.inventory, :delimiter => ',')%> <small><%=product.unit_of_measurement%></small></p>
                 </div>
                 <div class='rows'>
                     <p>⭐️️️️️️️⭐️⭐️⭐️<%=product.rating%></p>
