--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
  <h2 style="text-align:center">New Produce</h2>
 
-  <%= simple_form_for(@product) do |f| %>
+  <%= simple_form_for(@product, :html => { :multipart => true }) do |f| %>
     <div class="form-inputs mt-4">
       <%= f.input :name, label: "Name" %>
       <%= f.input :category, label: "Category", as: :select, collection: ['Fruits', 'Vegetables', 'Meat', 'Dairy' ] %>
@@ -9,6 +9,11 @@
       <%= f.input :unit_of_measurement, label: "Unit of measurement", as: :select, collection: ['kg', 'grams', 'lbs', 'ounces', 'liter', 'gallons']  %>
       <%= f.input :inventory, label: "Inventory" %>
       <%= f.input :price, label: "Price per unit"%>
+      <%= f.fields_for :product_photos do |p| %>
+       <%= p.label :data %><br>
+       <%= p.file_field :data, :multiple => true, name: "product_photos[data][]" %>
+     </div>
+   <% end %>
     </div>
     <div class="form-actions mt-4 mb-4">
       <%= f.button :submit, class: "btn btn-success" %>
