--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -13,7 +13,7 @@
                 <%= link_to "", edit_product_path(product), class: "fas fa-plus-circle add-b" , style: 'font-size: 25px; color: black'%>
             </div>
             <div class='card-img'>
-                <img src='https://static6.depositphotos.com/1001503/609/i/950/depositphotos_6092650-stock-photo-healthy-food-background-orange.jpg'>
+                <%= cl_image_tag product.photo, height: 160, width: 335, style: 'object-fit: cover', crop: :fill %>
             </div>
             <div class='card-details'>
                 <div class='rows'>
