--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,6 +1,6 @@
 .btn-f{
-  width: 150;
-  height:50;
+  width: 150px;
+  height:50px;
   text-decoration: none;
   font-size: 24;
   border: 1px solid #384d48;
@@ -16,8 +16,8 @@
 }
 
 .btn-f-d{
-  width: 150;
-  height:50;
+  width: 150px;
+  height:50px;
   color: white;
   background-color: #384d48;
   font-size: 24;
@@ -33,8 +33,8 @@
   background: white;
 }
 .btn-m {
-  width: 200;
+  width: 200px;
 }
 .btn-l {
-  width: 300;
+  width: 300px;
 }
