--- a/app/views/pages/components.html.erb
+++ b/app/views/pages/components.html.erb
@@ -75,6 +75,66 @@
 
           
         </div>
+        <br>
+
+
+
+        <h1>Avatars S M L, S M L bordered</h1>
+        <img class="avatar" alt="avatar" src="https://kitt.lewagon.com/placeholder/users/cveneziani" />
+        <img class="avatar-m" alt="avatar-m" src="https://kitt.lewagon.com/placeholder/users/arthur-littm" />
+        <img class="avatar-l" alt="avatar-l" src="https://kitt.lewagon.com/placeholder/users/arthur-littm" />
+        <img class="avatar-bordered" alt="avatar-bordered" src="https://kitt.lewagon.com/placeholder/users/sarahlafer" /> 
+        <img class="avatar-m-bordered" alt="avatar-m-bordered" src="https://kitt.lewagon.com/placeholder/users/arthur-littm" /> 
+        <img class="avatar-l-bordered" alt="avatar-l-bordered" src="https://kitt.lewagon.com/placeholder/users/arthur-littm" /> 
+        <br>
+        <hr>
+
+
+        <h1>Farmer Profile Banner</h1>
+
+        <div class="profile-background">
+            <img src="https://images.unsplash.com/photo-1543418219-44e30b057fea?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2851&q=80">
+            <div class="profile-infos" >
+                <img class=" profile-avatar avatar-l-bordered" alt="avatar-l-bordered" src="https://kitt.lewagon.com/placeholder/users/arthur-littm" /> 
+                <div class="profile-text">
+                    <div class="name-location">
+                        <h1>Billy Joel</h1>
+                        <h2>Location</h2>
+                    </div>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centurie</p>
+                </div>
+            </div>
+        </div>
+        <hr>
+
+        <h1>Create Product Box</h1>
+
+        <div class="create-product-container">
+            <img src="https://images.unsplash.com/photo-1482012792084-a0c3725f289f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80">
+            <div class="product-info">
+                <div class="name-tag-inputs">
+                    <input  type="text" name="product-name" id="product-name" placeholder="Name..."/>
+                    <input  type="text" name="product-tag" id="product-tag" placeholder="Tag..." />
+                </div>
+                <h5>Description:</h5>
+                <textarea class="description-input" placeholder="short and precise pls..."></textarea>
+                <h5>Price:</h5>
+                <div class="price-kg">
+                    <input  type="integer" name="product-price" id="product-price" placeholder="Price..."/>
+                    <input  type="text" name="product-uom" id="product-uom" placeholder="UOM" />
+                </div>
+                <div class="add-product">
+                    <button href="#" type="submit" class="btn-f btn-m">Add Product</button>
+                </div>
+
+            </div>
+        </div>
+
+        <br>
+        <br>
+
+        
+
     </div>
     
 
