--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -1,17 +1,48 @@
 .avatar {
-  width: 40px;
+  width: 50px;
   border-radius: 50%;
 }
-.avatar-large {
-  width: 56px;
+.avatar-m {
+  width: 105px;
   border-radius: 50%;
 }
+
+.avatar-l {
+  width: 180px;
+  border-radius: 50%;
+}
+
 .avatar-bordered {
-  width: 40px;
+  width: 50px;
   border-radius: 50%;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   border: white 1px solid;
 }
+
+.avatar-m-bordered {
+  width: 105px;
+  border-radius: 50%;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+  border: white 2px solid;
+}
+
+.avatar-l-bordered {
+  width: 180px;
+  border-radius: 50%;
+  box-shadow: 0 3px 3px rgba(0,0,0,0.2);
+  border: white 3px solid;
+}
+
+
+
+
+
+
+
+
+
+
+
 .avatar-square {
   width: 40px;
   border-radius: 0px;
