--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
  <h2 style="text-align:center">New Produce</h2>
 
-  <%= simple_form_for(@product) do |f| %>
+  <%= simple_form_for(@product, @product_photo) do |f| %>
     <div class="form-inputs mt-4">
       <%= f.input :name, label: "Name" %>
       <%= f.input :category, label: "Category", as: :select, collection: ['Fruits', 'Vegetables', 'Meat', 'Dairy' ] %>
@@ -9,9 +9,11 @@
       <%= f.input :unit_of_measurement, label: "Unit of measurement", as: :select, collection: ['kg', 'grams', 'lbs', 'ounces', 'liter', 'gallons']  %>
       <%= f.input :inventory, label: "Inventory" %>
       <%= f.input :price, label: "Price per unit"%>
+      <%= f.input :data %>
+      <%= f.input :data_cache, as: :hidden %>
     </div>
     <div class="form-actions mt-4 mb-4">
-      <%= f.button :submit, class: "btn btn-success" %>
+      <%= f.button :submit, 'Add Another Photo' class: "btn btn-success" %>
     </div>
   <% end %>
 </div>
