--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,1 +1,7 @@
 <%= @order %>
+
+<% @order.order_products.each do |order_product| %>
+  <%= order_product.product.name %>
+<% end %>
+
+<%= link_to "checkout"  %>
