--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,8 +2,10 @@
 <p>Find me in app/views/pages/home.html.erb</p>
 
 <% if user_signed_in? %>
-<%= link_to "Logout", destroy_user_session_path(current_user), method: :delete %>
-<% else %>
-<%= link_to "Sign Up", new_user_registration_path %>
-<%= link_to "Sign In", new_user_session_path %>
+  <%= link_to "Logout", destroy_user_session_path(current_user), method: :delete %>
 <% end %>
+<% if !user_signed_in?%>
+  <%= link_to "Sign Up", new_user_registration_path %>
+  <%= link_to "Sign In", new_user_session_path %>
+<% end %>
+<%= link_to "All products", products_path %>  
