--- a/app/assets/stylesheets/components/_create_product_box.scss
+++ b/app/assets/stylesheets/components/_create_product_box.scss
@@ -5,11 +5,27 @@
   box-shadow: 0 10px 40px rgba(0,0,0,0.2);
 }
 
-.create-product-container > img {
+.background-img {
   height: 383px;
   width: 560px;
-  object-fit: cover; 
+  background-size: cover; 
   overflow: hidden; 
+  position: relative;
+}
+
+.custom-file-upload {
+  background: #ffffff;
+  position: absolute;
+  right: 50px;
+  bottom: 10px;
+  border-radius: 4px;
+  display: inline-block;
+  padding: 12px 18px;
+  cursor: pointer;
+}
+
+  input[type="file"] {
+  display: none;
 }
 
 .product-info {
@@ -20,18 +36,18 @@
 .name-tag-inputs {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 25px;
+  margin-bottom: 20px;
  
 }
 
 #product-name {
-  border: none; /* <-- This thing here */
+  border: none; 
   border:solid 1px #ccc;
   border-radius: 4px;
 }
 
 #product-tag {
-  border: none; /* <-- This thing here */
+  border: none;
   border:solid 1px #ccc;
   border-radius: 4px;
 }
@@ -39,8 +55,8 @@
 .description-input {
   width: 100%;
   height: 150px;
-  margin-bottom: 25px;
-  border: none; /* <-- This thing here */
+  margin-bottom: 20px;
+  border: none; 
   border:solid 1px #ccc;
   border-radius: 4px;
 }
@@ -51,23 +67,19 @@
 }
 
 #product-price {
-  border: none; /* <-- This thing here */
+  border: none; 
   border:solid 1px #ccc;
   border-radius: 4px;
 }
 
 #product-uom {
-  border: none; /* <-- This thing here */
+  border: none; 
   border:solid 1px #ccc;
   border-radius: 4px;
 }
 
-
-
-
-
 .add-product {
-  padding: 60px;
+  padding: 30px;
   display: flex;
   align-items: center;
   justify-content: center;
