--- a/app/views/pages/components.html.erb
+++ b/app/views/pages/components.html.erb
@@ -107,28 +107,38 @@
         </div>
         <hr>
 
-        <h1>Create Product Box</h1>
+        <%
+=begin%>
+ <h1>Create Product Box</h1>
 
         <div class="create-product-container">
-            <img src="https://images.unsplash.com/photo-1482012792084-a0c3725f289f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80">
-            <div class="product-info">
-                <div class="name-tag-inputs">
-                    <input  type="text" name="product-name" id="product-name" placeholder="Name..."/>
-                    <input  type="text" name="product-tag" id="product-tag" placeholder="Tag..." />
+            <%= simple_form_for(@product) do |f| %>
+                <div class="background-img" style="background-image: url(https://images.unsplash.com/photo-1482012792084-a0c3725f289f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80)">
+                    <label class="custom-file-upload">
+                        <%= f.input :image %>
+                    </label>
                 </div>
-                <h5>Description:</h5>
-                <textarea class="description-input" placeholder="short and precise pls..."></textarea>
-                <h5>Price:</h5>
-                <div class="price-kg">
-                    <input  type="integer" name="product-price" id="product-price" placeholder="Price..."/>
-                    <input  type="text" name="product-uom" id="product-uom" placeholder="UOM" />
+            
+                <div class="product-info">
+                    <div class="name-tag-inputs">
+                        <%= f.input :name, label: "Name...", id:"product-name" %>
+                        <%= f.input :tag, label: "Tag...", id:"product-tag" %>
+                    </div>
+                    <h5>Description:</h5>
+                    <textarea class="description-input" placeholder="short and precise pls..."></textarea>
+                    <h5>Price:</h5>
+                    <div class="price-kg">
+                        <%= f.input :price, label: "Price...", id:"product-price" %>
+                        <%= f.input :unit_of_measurement, label: "UOM...", id:"product-uom" %>
+                    </div>
+                    <div class="add-product">
+                        <%= f.button :submit, class: "btn-f btn-m", label:"Add Product" %>
+                    </div>
                 </div>
-                <div class="add-product">
-                    <button href="#" type="submit" class="btn-f btn-m">Add Product</button>
-                </div>
-
-            </div>
-        </div>
+            <% end %>
+        </div> 
+<%
+=end%>
 
         <br>
         <br>
