--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -14,4 +14,37 @@
       <%= f.button :submit, class: "btn btn-success" %>
     </div>
   <% end %>
+
+  <div class="create-product-container">
+            <%= simple_form_for(@product) do |f| %>
+                <div class="background-img" style="background-image: url(https://images.unsplash.com/photo-1482012792084-a0c3725f289f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80)">
+                    <label class="custom-file-upload" >
+                     
+                        <%
+=begin%>
+                            <%= f.input :image %> 
+                            <%= f.input :image_cache, as: :hidden %>
+<%
+=end%>
+                    </label>
+                </div>
+            
+                <div class="product-info">
+                    <div class="name-tag-inputs">
+                        <%= f.input :name, label: "Name", id:"product-name" %>
+                        <%= f.input :category, label: "Category", id:"product-tag" %>
+                    </div>
+                    <h5>Description:</h5>
+                    <textarea class="description-input" placeholder="short and precise pls..."></textarea>
+                
+                    <div class="price-kg">
+                        <%= f.input :price, label: "Price", id:"product-price" %>
+                        <%= f.input :unit_of_measurement, label: "Unit of Measurement", id:"product-uom" %>
+                    </div>
+                    <div class="add-product">
+                        <%= f.button :submit, class: "btn-f btn-m", label:"Add Product" %>
+                    </div>
+                </div>
+            <% end %>
+        </div>
 </div>
