--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -5,7 +5,7 @@
     margin-top: 50px;
 }
 
-.card-img img {
+.card-img {
     width: 100%;
     height: 160px;
     object-fit: cover;
@@ -39,14 +39,12 @@
     
   }
 
-.action-buttons {
-    position: absolute;
-}
+
 
 // END of Card for products in products page
 
 // Additions to product show page
-.add-to-cart {
-    position: absolute;
-}
+// .add-to-cart {
+//     position: absolute;
+// }
 // End of additions to product show page
