--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -16,6 +16,7 @@
                 required: true,
                 autofocus: true,
                 input_html: { autocomplete: "avatar" }%>
+    <%= f.input :avatar_cache, as: :hidden %>
     <%= f.input :email,
                 required: true,
                 autofocus: true,
