--- a/app/views/farmers/new.html.erb
+++ b/app/views/farmers/new.html.erb
@@ -1,11 +1,15 @@
 <div class="container">
  <h2 style="text-align:center">Create a Farmer Profile</h2>
 
-  <%= simple_form_for(@farmer) do |f| %>
+  <%= simple_form_for(@farmer, :html => { :multipart => true }) do |f| %>
     <div class="form-inputs mt-4">
       <%= f.input :name, label: "What's the name of your company?" %>
       <%= f.input :address, label: "What's your address?" %>
       <%= f.input :description, label: "Add a description to your farm" %>
+      <%= f.fields_for :farmer_photos do |p| %>
+       <%= p.label :data %><br>
+       <%= p.file_field :data, :multiple => true, name: "farmer_photos[data][]" %>
+   <% end %>
     </div>
     <div class="form-actions mt-4 mb-4">
       <%= f.button :submit, class: "btn btn-success" %>
