--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -3,13 +3,17 @@
     width: 335px;
     box-shadow: 0px 4px 24px rgba($color: #000000, $alpha: 0.3);
     margin-top: 50px;
+    position: relative;
 }
 
 .card-img img {
     width: 100%;
     height: 160px;
     object-fit: cover;
+    background: opacify($color: #000000, $amount: 0.3);
 }
+
+
 
 .card-details {
     background-color: #ffffff;
@@ -34,8 +38,6 @@
 
 .photo-card {
     position: absolute;
-    margin-left: 246px;
-    margin-top: -25px;
     
   }
 
