--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -23,7 +23,7 @@
   font-size: 24;
   border: 1px solid #384d48;
   border-radius: 5px;
-  transition: 0.3s
+  transition: 0.3s;
 }
 
 .btn-f-d:hover{
