--- a/app/views/pages/components.html.erb
+++ b/app/views/pages/components.html.erb
@@ -39,6 +39,19 @@
                       font-size: 60px;">
             </i>
         </div>
+        
+        <br>
+        <h1>Landing Page Search Bar</h1>
+        <form novalidate="novalidate" class="simple_form search" action="/" accept-charset="UTF-8" method="get"><input name="utf8" type="hidden" value="&#x2713;" />
+            <div class="search-form-control form-group">
+                 <input class="form-control string required" type="text" name="search[query]" id="search_query" />
+                 <button name="button" type="submit" class="btn btn-flat">
+                <i class="fas fa-search"></i> Search
+                </button>
+            </div>
+        </form>
+
+
         <br>
         <hr>
 
