order checkout logic and order views

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,3 +7,8 @@
 <%= link_to "Sign Up", new_user_registration_path %>
 <%= link_to "Sign In", new_user_session_path %>
 <% end %>
+
+<% if current_user.role == "Restaurant" %>
+<%= link_to "Go to cart", restaurant_cart_path(current_user.restaurant) %>
+<%= link_to "My orders", restaurant_orders_path(current_user.restaurant) %>
+<% end %>
