--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -17,7 +17,7 @@
             <div class='card-details'>
                 <div class='rows'>
                     <h4><%= product.name %></h4>
-                    <img class='avatar photo-card' src='https://kitt.lewagon.com/placeholder/users/krokrob'>
+                    <%= cl_image_path product.farmer_photos.avatar, height: 50, width: 50, crop: :fill %>
                 </div>
                 <div class='rows'>
                     <p>⭐️️️️️️️⭐️⭐️⭐️<%=product.rating%></p>
