Checkout user flow

--- a/app/views/orders/my_orders.html.erb
+++ b/app/views/orders/my_orders.html.erb
@@ -1,5 +1,6 @@
-<% @orders.each do |order| %>
+<% @paid_orders.each do |order| %>
 <%= order  %>
+<%= order.status %>
 <%= link_to "View order details", order_path(order) %>
 <% end %>
 
