--- a/app/views/orders/my_active_order.html.erb
+++ b/app/views/orders/my_active_order.html.erb
@@ -1,7 +1,13 @@
 <h1>Your cart</h1>
-<% @order.order_products.each do |order_product| %>
-  <%= order_product %>
-  <%= link_to "Remove", order_product_path(order_product), method: :delete %>
+
+
+<% if @order.order_products %>
+  <% @order.order_products.each do |order_product| %>
+    <%= order_product %>
+    <%= link_to "Remove", order_product_path(order_product), method: :delete %>
+  <% end %>
 <% end %>
 
-<%= link_to "Checkout", order_path(order) %>
+<br>
+
+<%= link_to "Checkout",checkout_path(@order), method: :patch %>
