--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,4 +1,4 @@
-<%= link_to 'Go to cart', order_path(current_user.restaurant.active_order) %>
+<%= link_to "Go to cart", restaurant_cart_path(current_user.restaurant) %>
 
 <div class='page-container'>
     <div class='side-nav'>
