--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -19,13 +19,9 @@
             <%= simple_form_for(@product) do |f| %>
                 <div class="background-img" style="background-image: url(https://images.unsplash.com/photo-1482012792084-a0c3725f289f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80)">
                     <label class="custom-file-upload" >
-                     
-                        <%
-=begin%>
-                            <%= f.input :image %> 
-                            <%= f.input :image_cache, as: :hidden %>
-<%
-=end%>
+                        <%= f.fields_for :product_photos do |p| %>
+                        <%= p.file_field :data, :multiple => true, name: "product_photos[data][]" %>
+                        <% end %>
                     </label>
                 </div>
             
