--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -10,7 +10,7 @@
     width: 100%;
     height: 160px;
     object-fit: cover;
-    background: opacify($color: #000000, $amount: 0.3);
+    background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://picsum.photos/400/335);
 }
 
 
