--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -14,17 +14,15 @@
 
     <div class='cards-container'>
         <% @products.each do |product| %>
-            <div class=product-card>
-                
-                <div class='add-to-cart'>            
-                    <% if current_user.role == "Farmer" %>
-                        <%= link_to product_order_products_path(product), class: "nav-icon", method: :post do %>
-                            <ion-icon name="add-circle-outline"></ion-icon>
-                        <% end %>                
-                    <% end %>            
-                </div>
-                <div class='card-img'>
-                    <img src="https://static6.depositphotos.com/1001503/609/i/950/depositphotos_6092650-stock-photo-healthy-food-background-orange.jpg">
+            <div class='product-card'>
+                <div class='card-img' style="background-image: url('<%= cl_image_path product.product_photos.first.data, height: 160, width: 335, crop: :fill %>')">
+                    <div class='add-to-cart'>            
+                        <% if current_user.role == "Restaurant" %>
+                            <%= link_to product_order_products_path(product), class: "nav-icon", method: :post do %>
+                                <ion-icon name="add-circle-outline"></ion-icon>
+                            <% end %>                
+                        <% end %>            
+                    </div>
                 </div>
 
                 <div class='card-details'>
@@ -43,6 +41,6 @@
 
             </div>
         <% end %>
-    </div>
+        </div>
 </div>
 
