--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,8 +5,8 @@
 <%= link_to "Logout", destroy_user_session_path(current_user), method: :delete %>
   <% if current_user.role == "Restaurant" %>
   <%= link_to "Link to market", products_path %>
-  <%= link_to "Go to cart", restaurant_cart_path(current_user.restaurant) %>
-  <%= link_to "My orders", restaurant_orders_path(current_user.restaurant) %>
+  <%= link_to "Go to cart", restaurant_cart_path %>
+  <%= link_to "My orders", restaurant_orders_path %>
   <% end %>
 <% else %>
 <%= link_to "Sign Up", new_user_registration_path %>
