--- a/app/assets/stylesheets/components/_search.scss
+++ b/app/assets/stylesheets/components/_search.scss
@@ -41,8 +41,9 @@
 .btn-flat {
   padding: 8px 24px;
   border-radius: 4px;
-  background: #ffffff80;
+  background: #384d48;
   transition: background 0.3s ease;
+  color: #ffffff90;
 }
 
 .btn-flat:hover {
