--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="banner" style="background-image: linear-gradient(to right top,rgba(128,128,128,0.8),rgba(157,158,158,0.5), rgba(190,190,190,0.2), rgba(222,222,222,0)), url(https://images.unsplash.com/photo-1534073133331-c4b62a557083?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2850&q=80);">
+<div class="banner clearfix" style="background-image: linear-gradient(to right top,rgba(128,128,128,0.8),rgba(157,158,158,0.5), rgba(190,190,190,0.2), rgba(222,222,222,0)), url(https://images.unsplash.com/photo-1534073133331-c4b62a557083?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2850&q=80);">
   <div class="container">
     <h1>The Farmers' <strong>eMarket</strong></h1>
     <p>Order local and fresh ingredients for your restaurant</p>
