sign-up log-in create-farm create-resto

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,12 +1,15 @@
 // Import your components CSS files here.
 @import "alert";
 @import "avatar";
-@import "navbar";
-
-@import "input";
+@import "banner";
+@import "button";
 @import "card";
+@import "cards";
+@import "create_product_box";
+@import "form";
+@import "input";
+@import "navbar";
 @import "order";
 @import "search";
-@import "button";
-@import "banner";
-@import "create_product_box";
+
+
