--- a/app/views/farmers/new.html.erb
+++ b/app/views/farmers/new.html.erb
@@ -1,14 +1,20 @@
 <div class="container">
- <h2 style="text-align:center">Create a Farmer Profile</h2>
+  <div class="row justify-content-center ">
+    <div class="col-xs-12 col-sm-6 col-sm-offset-6">
+      <div class="form-login">
+        <h2 style="text-align:center">Your farm</h2>
 
-  <%= simple_form_for(@farmer) do |f| %>
-    <div class="form-inputs mt-4">
-      <%= f.input :name, label: "What's the name of your company?" %>
-      <%= f.input :address, label: "What's your address?" %>
-      <%= f.input :description, label: "Add a description to your farm" %>
+        <%= simple_form_for(@farmer) do |f| %>
+          <div class="form-inputs mt-4">
+            <%= f.input :name, label: "What is the name of your company" %>
+            <%= f.input :address, label: "Where is your farm located" %>
+            <%= f.input :description, label: "What restaurants should know about your farm" %>
+          </div>
+          <div class="form-actions d-flex justify-content-center mt-4 mb-4">
+            <%= f.button :submit, "Create farm", class: "btn-f-d btn-l" %>
+          </div>
+        <% end %>
+      </div>
     </div>
-    <div class="form-actions mt-4 mb-4">
-      <%= f.button :submit, class: "btn btn-success" %>
-    </div>
-  <% end %>
+  </div>
 </div>
