--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,13 +1,22 @@
 <div class="container">
- <h2 style="text-align:center">New Restaurant</h2>
+  <div class="row justify-content-center ">
+    <div class="col-xs-12 col-sm-6 col-sm-offset-6">
+      <div class="form-login">
 
-  <%= simple_form_for(@restaurant) do |f| %>
-    <div class="form-inputs mt-4">
-      <%= f.input :name, label: "Restaurant name" %>
-      <%= f.input :address, label: "Address" %>
+         <h2 style="text-align:center">Your restaurant</h2>
+
+          <%= simple_form_for(@restaurant) do |f| %>
+            <div class="form-inputs mt-4">
+              <%= f.input :name, label: "What is the name of your company" %>
+              <%= f.input :address, label: "What is your billing address" %>
+            </div>
+            <div class="form-actions d-flex justify-content-center mt-4 mb-4">
+              <%= f.button :submit, "Create restaurant", class: "btn-f-d btn-l" %>
+            </div>
+          <% end %>
+     </div>
     </div>
-    <div class="form-actions mt-4 mb-4">
-      <%= f.button :submit, class: "btn btn-success" %>
-    </div>
-  <% end %>
+  </div>
 </div>
+
+
