save progress on navbar

--- a/app/views/pages/components.html.erb
+++ b/app/views/pages/components.html.erb
@@ -131,12 +131,19 @@
         </div>
 
         <br>
-        <br>
-
-        
-
+        <br>   
     </div>
     
+    <div class='farmer-nav'>
+        <div class='list-container'>
+            <ul>
+                <li>About</li>
+                <li style='position: relative; left: 30%;'>Farmers' eMarket</li>
+                <li style='float:right'>Sign In</li>
+                <li style='float:right'>Sign Up</li>
+            </ul>
+        </div>
+    </div>
 
   </body>
 </html>
