--- a/app/views/pages/components.html.erb
+++ b/app/views/pages/components.html.erb
@@ -137,10 +137,10 @@
     <div class='farmer-nav'>
         <div class='list-container'>
             <ul>
-                <li>About</li>
-                <li style='position: relative; left: 30%;'>Farmers' eMarket</li>
-                <li style='float:right'>Sign In</li>
+                <li>Farmers' eMarket</li>
                 <li style='float:right'>Sign Up</li>
+                <li style='float:right'>Sign In</li>
+                <li style='float:right'>About</li>
             </ul>
         </div>
     </div>
