finished show page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,4 +15,9 @@
 
 // 
 @import "products/index";
-@import "products/my_products";
+@import "farmers/show";
+
+.container-f {
+    width: 1320px;
+    margin: 0 auto;
+}
