--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,7 +1,7 @@
 .profile-background {
   overflow: hidden;
   background: white;
-  height: 650px;
+  height: 700px;
   width: 100%;
 }
 
@@ -31,7 +31,7 @@
 }
 
 .profile-infos .profile-text {
-  margin-left: 160px;
+  margin-left: 150px;
 }
 
 .name-location {
@@ -41,8 +41,9 @@
 
 .profile-infos .profile-avatar {
   position: absolute;
-  left: 16px;
+  left: 1px;
   top: -90px;
+  width: 180px ;
 }
 
 
