--- a/app/assets/stylesheets/components/_input.scss
+++ b/app/assets/stylesheets/components/_input.scss
@@ -18,6 +18,8 @@
 }
 
 .input-search {
-  width: 1125px;
-  height: 80px;
+  width: 1098px;
+  height: 64px;
+  border-radius: 0px;
+  margin-top: 50px;
 }
