--- a/app/assets/stylesheets/products/_index.scss
+++ b/app/assets/stylesheets/products/_index.scss
@@ -12,9 +12,7 @@
 
 .cards-container {
     display: flex;
-    width: 1120px;
-    margin: 0 auto;
-    flex-wrap: wrap;
+    // margin: 0 auto;
 }
 
 .nav-icon {
