--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -60,7 +60,7 @@
 <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
     
-      
+    <div class="modal-content">
 
     <div class="create-product-container">
             <%= simple_form_for(@product) do |f| %>
@@ -97,6 +97,7 @@
                 </div>
             <% end %>
         </div>
+    </div>
 </div>
 
 
