--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -19,39 +19,7 @@
     </div>
   <% end %>
 
-  <div class="create-product-container">
-            <%= simple_form_for(@product) do |f| %>
-                <div class="background-img" style="background-image: url(https://images.unsplash.com/photo-1482012792084-a0c3725f289f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80)">
-                    <label class="custom-file-upload" >
-                        <%= f.fields_for :product_photos do |p| %>
-                        <%= p.file_field :data, :multiple => true, name: "product_photos[data][]" %>
-                        <% end %>
-                    </label>
-                </div>
-            
-                <div class="product-info">
-                    <div class="name-tag-inputs">
-                        <%= f.input :name, label: "Name", id:"product-name" %>
-                        <%= f.input :category, label: "Category", id:"product-tag" %>
-                    </div>
-            
-                    <%= f.input :description, id:"product-description" %>
-                    <div class="price-kg">
-                        <%= f.input :price, label: "Price", id:"product-price" %>
-                        <%= f.input :unit_of_measurement, label: "Unit of Measurement", id:"product-uom" %>
-                    </div>
-                    <div class="sku-inventory">
-                        <%= f.input :sku, label: "SKU", id:"product-sku" %>
-                        <%= f.input :inventory, label: "Inventory", id:"product-inventory" %>
-                    </div>
 
-                    <div class="add-product">
-                        <%= f.button :submit, class: "btn-f btn-m", label:"Add Product" %>
-                    </div>
-                </div>
-            <% end %>
-        </div>
-</div>
 
 <!-- Button trigger modal -->
 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
@@ -61,7 +29,7 @@
 <!-- Modal -->
 <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
-    
+    <div class="modal-content">
       
 
     <div class="create-product-container">
@@ -80,16 +48,16 @@
                 <div class="product-info">
                     <div class="name-tag-inputs">
                         <%= f.input :name, label: "Name", id:"product-name" %>
-                        <%= f.input :category, label: "Category", id:"product-tag" %>
+                        <%= f.input :category, label: "Category", as: :select, collection: ['Fruits', 'Vegetables', 'Meat', 'Dairy' ], id:"product-category" %>
                     </div>
             
                     <%= f.input :description, id:"product-description" %>
                     <div class="price-kg">
                         <%= f.input :price, label: "Price", id:"product-price" %>
-                        <%= f.input :unit_of_measurement, label: "Unit of Measurement", id:"product-uom" %>
+                        <%= f.input :unit_of_measurement, label: "Unit of measurement", as: :select, collection: ['kg', 'grams', 'lbs', 'ounces', 'liter', 'gallons'], id:"product-uom"  %>
                     </div>
                     <div class="sku-inventory">
-                        <%= f.input :sku, label: "SKU", id:"product-sku" %>
+                        <%= f.input :sku, label: "SKU", input_html: { value: Array.new(10){ [*'0'..'9',*'A'..'Z'].sample }.join }, disabled:true, id:"product-sku"%>
                         <%= f.input :inventory, label: "Inventory", id:"product-inventory" %>
                     </div>
 
@@ -99,6 +67,7 @@
                 </div>
             <% end %>
         </div>
+    </div>
 </div>
 
 
