--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -34,7 +34,7 @@
 <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
     
-      
+    <div class="modal-content">
 
         <div class="product-box">
 
@@ -63,6 +63,7 @@
              <button href="#" class="btn-f btn-m">Add to cart</button>        
           </div>
         </div>
+      </div>
 
 
   </div>
