--- a/app/views/orders/my_active_order.html.erb
+++ b/app/views/orders/my_active_order.html.erb
@@ -12,4 +12,7 @@
 
 <br>
 
-<%= link_to "Checkout",checkout_path(@order), method: :patch %>
+<%= link_to "Checkout", checkout_path(@order), method: :patch %>
+<br>
+<br>
+<%= link_to "Browse Market", products_path %>
