--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -12,9 +12,9 @@
             <% end %>
         <% end %>
         <h3>Fruits</h3>
-        <h3>Dairy</h3>
+        <h3>Veggies</h3>
         <h3>Meat</h3>
-        <h3>veggies</h3>
+        <h3>Dairy</h3>
     </div>
     <div>
         <div class="form-group-f">
@@ -22,7 +22,7 @@
                 <%= text_field_tag :query,
                     params[:query],
                     class: "input-f input-search",
-                    placeholder: "Search for product name , product category eg: Cheese, "
+                    placeholder: "Search for product name or category"
                 %>
                 <i class="fas fa-search searchf-f"
                 style="position: absolute;
