--- a/app/views/farmers/show.html.erb
+++ b/app/views/farmers/show.html.erb
@@ -40,9 +40,9 @@
             <% end %>
         <% end %>
         <h3>Fruits</h3>
-        <h3>Dairy</h3>
+        <h3>Veggies</h3>
         <h3>Meat</h3>
-        <h3>veggies</h3>
+        <h3>Dairy</h3>
     </div>
     <div>
         <div class="form-group-f">
@@ -50,9 +50,9 @@
                 <%= text_field_tag :query,
                     params[:query],
                     class: "input-f input-search",
-                    placeholder: "Search for product name , product category eg: Cheese, "
+                    placeholder: "Search for product name or category"
                 %>
-                <i class="fas fa-search searchf-f" 
+                <i class="fas fa-search searchf-f"
                 style="position: absolute;
                         top: 63px;
                         left: 1040px;
@@ -85,7 +85,7 @@
                     </div>
                 </div>
                 </div>
-                
+
             <% end %>
         </div>
     </div>
