--- a/app/views/pages/components.html.erb
+++ b/app/views/pages/components.html.erb
@@ -157,16 +157,16 @@
         <br>   
     </div>
     
+ <%# nav for all pages except home %>
     <div class='farmer-nav'>
         <div class='list-container'>
             <ul>
-                <li>Farmers' eMarket</li>
-                <li style='float:right'>Sign Up</li>
-                <li style='float:right'>Sign In</li>
-                <li style='float:right'>About</li>
+                <li style='font-size: 24px'>Farmers' eMarket</li>
+                <li style='float:right'>Market</li>
+                <li style='float:right'>My Orders</li>
+                <li style='float:right'>Sign Out</li>
             </ul>
         </div>
     </div>
-
   </body>
 </html>
