--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,23 @@
 <div class="banner clearfix" style="background-image: linear-gradient(to right top,rgba(128,128,128,0.8),rgba(157,158,158,0.5), rgba(190,190,190,0.2), rgba(222,222,222,0)), url(https://images.unsplash.com/photo-1534073133331-c4b62a557083?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2850&q=80);">
+  <% if user_signed_in? %>
+    <div class='farmer-nav-home' style='right: -1100px;'>
+        <div class='list-container-home'>
+            <ul>
+                <li> <%=link_to "Logout", destroy_user_session_path(current_user), method: :delete, style:'float:right; color:white'%></li>
+            </ul>
+        </div>
+  </div>
+  <% else %>
+  <div class='farmer-nav-home'>
+        <div class='list-container-home'>
+            <ul>
+                <li> <%= link_to "Sign Up", new_user_registration_path, style:'float:right; color:white'%></li>
+                <li> <%= link_to "Sign In", new_user_session_path, style:'float:right; color:white'%></li>
+                <li> <%= link_to "About", new_user_session_path, style:'float:right; color:white'%></li>
+            </ul>
+        </div>
+  </div>
+  <% end %>
   <div class="container">
     <h1>The Farmers' <strong>eMarket</strong></h1>
     <p>Order local and fresh ingredients for your restaurant</p>
