--- a/app/views/farmers/show.html.erb
+++ b/app/views/farmers/show.html.erb
@@ -38,11 +38,16 @@
                         class="icon-position">
                 </ion-icon>
             <% end %>
+            <h3>Fruits</h3>
+            <h3>Veggies</h3>
+            <h3>Meat</h3>
+            <h3>Dairy</h3>
+        <% else%>
+            <h3 style="margin-top: 100px;">Fruits</h3>
+            <h3>Veggies</h3>
+            <h3>Meat</h3>
+            <h3>Dairy</h3>
         <% end %>
-        <h3>Fruits</h3>
-        <h3>Veggies</h3>
-        <h3>Meat</h3>
-        <h3>Dairy</h3>
     </div>
     <div>
         <div class="form-group-f">
