--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -6,8 +6,14 @@
                 <li> <%= link_to "Farmers' eMarket", root_path, style: 'font-size: 24px; color: white'%></li>
                 <div class='float-list'>
                 <li> <%= link_to "Market", products_path, style:'color:white'%></li>
-                <li> <%= link_to "My Orders", order_path(current_user.restaurant), style:'color:white'%></li>
-                <li> <%= link_to "Cart", restaurant_cart_path(current_user.restaurant), style:'color:white'%></li>
+                <% if current_user.role == "Restaurant" %>
+                    <li> <%= link_to "My Orders", restaurant_orders_path, style:'color:white'%></li>           
+                    <li> <%= link_to "Cart", restaurant_cart_path, style:'color:white'%></li>
+                <% end %>
+                <% if current_user.role == "Farmer" %>
+                    <li> <%= link_to "My profile", farmers_path(@farmer), style:'color:white'%></li>           
+                    <li> <%= link_to "Add a product", new_product_path, style:'color:white'%></li>
+                <% end %>
                 <li> <%= link_to "Logout", destroy_user_session_path(current_user), style:'color:white'%></li>
                 </div>
             </ul>
