--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,11 +12,9 @@
                     <li> <%= link_to "Cart", restaurant_cart_path, style:'color:white; text-decoration: none'%></li>
                 <% end %>
                 <% if current_user.role == "Farmer" %>
-                    <li> <%= link_to "My profile", farmers_path(@farmer), style:'color:white; text-decoration: none'%></li>           
-                    <li> <%= link_to "Add a product", new_product_path, style:'color:white; text-decoration: none'%></li>
+                    <li> <%= link_to "My Profile", farmer_path(current_user.farmer), style:'color:white; text-decoration: none'%></li>           
+                    <li> <%= link_to "Add a Product", new_product_path, style:'color:white; text-decoration: none'%></li>
                 <% end %>
-                <li> <%= link_to "My Orders", restaurant_orders_path, style:'color:white; text-decoration: none'%></li>
-                <li> <%= link_to "Cart", restaurant_cart_path, style:'color:white; text-decoration: none'%></li>
                 <li> <%= link_to "Logout", destroy_user_session_path, style:'color:white; text-decoration: none'%></li>
                 </div>
             </ul>
