fixed space at top banner

--- a/app/views/farmers/show.html.erb
+++ b/app/views/farmers/show.html.erb
@@ -1,5 +1,5 @@
-<div class="profile-background">
-    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+<div class="profile-background clearfix">
+    <div id="carouselExampleControls" class="carousel slide clearfix" data-ride="carousel">
     <div class="carousel-inner">
         <div class="carousel-item active">
             <%= cl_image_tag @farmer.farmer_photos.first.data, height: 500, style: 'object-fit: cover', class: "d-block w-100" %>
